--- a/src/main/webapp/app/entities/incentive/incentive-update.component.html
+++ b/src/main/webapp/app/entities/incentive/incentive-update.component.html
@@ -21,10 +21,16 @@
                                  floatName.touched)">
                                     </small>
                                 </div>
-                                <div class="form-group" hidden>
-                                    <label class="form-control-label" for="field_image">Imagen</label>
-                                    <input type="text" class="form-control" name="image" id="field_image"
-                                           [(ngModel)]="incentive.image"/>
+                                <div class="form-group">
+                                    <label class="form-control-label" for="image">Logo</label>
+
+                                    <img src="{{incentive.image}}" class=" img-border gradient-summer width-100" alt="Card image">
+
+                                    <div class="custom-file center-block d-block">
+                                        <input type="file" class="form-control-file" id="image"
+                                               (change)="onFileChange($event)"
+                                               accept="image/x-png,image/jpeg">
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-control-label" for="field_quantity">Cantidad</label>
