--- a/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
@@ -19,8 +19,9 @@
                     <div class="col-sm-4 col-12 col-md-12 col-lg-4">
                         <div class="form-group">
                             <label class="form-control-label" for="field_name">Cantidad de participantes</label>
-                            <input #floatAmount="ngModel" type="number" class="form-control" name="participantsAmount" id="field_amount"
-                                   [(ngModel)]="focusGroup.participantsAmount" required/>
+                            <input #floatAmount="ngModel" type="number" class="form-control" name="participantsAmount"
+                                   id="field_amount"
+                                   [(ngModel)]="focusGroup.participantsAmount" required (change)="loadIncentives()"/>
                             <small class="form-text text-muted danger" *ngIf="!floatAmount.valid && (floatAmount.dirty ||
                                  floatAmount.touched)">Este campo es requerido.
                             </small>
@@ -50,7 +51,7 @@
                                    required [readonly]="true"/>
                             <span class="input-group-append">
                                 <button type="button" class="btn btn-secondary" (click)="beginDateDp.toggle()"><fa-icon
-                                    [icon]="'calendar-alt'"></fa-icon></button>
+                                        [icon]="'calendar-alt'"></fa-icon></button>
                             </span>
                         </div>
                         <small class="form-text text-muted danger" *ngIf="!floatStartDate.valid && (floatStartDate.dirty ||
@@ -66,7 +67,7 @@
                                    required [readonly]="true"/>
                             <span class="input-group-append">
                                 <button type="button" class="btn btn-secondary" (click)="endDateDp.toggle()"><fa-icon
-                                    [icon]="'calendar-alt'"></fa-icon></button>
+                                        [icon]="'calendar-alt'"></fa-icon></button>
                             </span>
                         </div>
                         <small class="form-text text-muted danger" *ngIf="!floatEndDate.valid && (floatEndDate.dirty ||
@@ -90,18 +91,6 @@
                         </select>
                     </fieldset>
                 </div>
-                <h4 class="form-section"><i class="ft-box"></i>Incentivo</h4>
-                <div class="col-xl-12 col-lg-12 col-md-12">
-                    <fieldset class="form-group">
-                        <label for="customSelectIncentive">Incentivos</label>
-                        <select [(ngModel)]="focusGroup.incentive" class="custom-select d-block w-100"
-                                id="customSelectIncentive" name="aptitudeTest" (change)="validateTest()">
-                            <option [ngValue]="null">No utilizar incentivo.</option>
-                            <option *ngFor="let incentive of incentives"
-                                    [ngValue]="incentive">{{incentive.name}}</option>
-                        </select>
-                    </fieldset>
-                </div>
                 <div class="col-xl-4 col-lg-4 col-md-4">
                     <div *ngIf="focusGroup.aptitudeTest" class="form-group">
                         <label class="form-control-label" for="field-grade">Nota mínima para participar</label>
@@ -115,6 +104,26 @@
                             La nota tiene que ser un número positivo mayor que 0 y menor o igual a 100.
                         </small>
                     </div>
+                </div>
+                <h4 class="form-section"><i class="ft-box"></i>Incentivo</h4>
+                <div class="col-xl-12 col-lg-12 col-md-12">
+                    <fieldset class="form-group">
+                        <label for="customSelectIncentive">Incentivos</label>
+                        <select [(ngModel)]="focusGroup.incentive" class="custom-select d-block w-100"
+                                [disabled]="!isMember|| focusGroup.participantsAmount === undefined || focusGroup.participantsAmount < 5"
+                                id="customSelectIncentive" name="incentive" (change)="validateIncentive()">
+                            <option [ngValue]="null" selected>No utilizar incentivo.</option>
+                            <option *ngFor="let incentive of incentives"
+                                    [ngValue]="incentive">{{incentive.name}}</option>
+                        </select>
+                        <small class="display-inline-block form-text text-muted info" *ngIf="!isMember">
+                            Esta funcion solo esta disponible para usuarios con membresia.
+                        </small>
+                        <small class="display-inline-block form-text text-muted info"
+                               *ngIf="isMember && focusGroup.participantsAmount === undefined || focusGroup.participantsAmount === 0">
+                            Debes ingresar una cantidad de participantes valida para seleccionar un incentivo.
+                        </small>
+                    </fieldset>
                 </div>
                 <div *ngIf="focusGroup.aptitudeTest" id="questionCardSection" class="row">
                     <h5 class="col-12 col-md-12 col-sm-12"><i class="ft-clipboard"></i> Preguntas</h5>
@@ -133,8 +142,8 @@
                                                name="desiredAnswerRadio{{question.id}}" class="custom-control-input"
                                                (change)="desiredAnswer(question, answer)">
                                         <label class="custom-control-label" for="answer{{answer.id}}"><span
-                                            class="display-block"><i
-                                            class="ft-minus"></i> {{answer.answer}}</span></label>
+                                                class="display-block"><i
+                                                class="ft-minus"></i> {{answer.answer}}</span></label>
                                     </div>
                                 </div>
                             </div>
@@ -151,10 +160,10 @@
                     </button>
                 </div>
                 <div
-                    *ngIf="editForm.form.invalid || isSaving || !validateAnswers() || !validEndDate() ||
+                        *ngIf="editForm.form.invalid || !validateAnswers() || !validEndDate() ||
                      !validatePassingGrade() || !validateParticipantsAmount(); else validEditBtn"
-                    [ngbPopover]="popoverText"
-                    triggers="mouseenter:mouseleave" popoverTitle="Formulario inválido." class="col-auto">
+                        [ngbPopover]="popoverText"
+                        triggers="mouseenter:mouseleave" popoverTitle="Formulario inválido." class="col-auto">
                     <button type="submit" id="save-entity-invalid" [disabled]="true"
                             class="btn btn-raised btn-primary">
                         <i class="ft-save"></i>&nbsp;<span> Guardar</span>
@@ -170,7 +179,7 @@
                 <ng-template #validEditBtn>
                     <div class="col-auto">
                         <button type="submit" id="save-entity-valid"
-                                class="btn btn-raised btn-primary">
+                                class="btn btn-raised btn-primary" [disabled]="isSaving">
                             <i class="ft-save"></i>&nbsp;<span> Guardar</span>
                         </button>
                     </div>
