--- a/src/main/webapp/app/account/activate/activate.component.html
+++ b/src/main/webapp/app/account/activate/activate.component.html
@@ -1,15 +1,23 @@
 <div>
     <div class="row justify-content-center">
         <div class="col-md-8">
-            <h1>Activación</h1>
 
-            <div class="alert alert-success" *ngIf="success">
-                <span><strong>Su cuenta ha sido activada.</strong> Por Favor </span>
-                <a class="alert-link" (click)="login()">Inicie Sesión</a>.
+            <div *ngIf="success">
+                <div id="successAlert" #successAlert class="popupunder alert alert-dismissible custom-alert-success">
+                    <button type="button" data-dismiss="alert" class="close" (click)="closeMe(successAlert)">×</button>
+                    <span class="ft-check"></span> <strong>¡Felicidades!</strong>
+                    <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
+                    <p>¡Su cuenta ha sido activada! Por favor <a class="alert-link" (click)="login()">inicie sesión. </a></p>
+                </div>
             </div>
 
-            <div class="alert alert-danger" *ngIf="error">
-                <strong>Su usuario no pudo ser activado.</strong>
+            <div *ngIf="error">
+                <div id="dangerErrorAlert" #dangerErrorAlert class="popupunder alert alert-dismissible custom-alert-danger">
+                    <button type="button" data-dismiss="alert" class="close" (click)="closeMe(dangerErrorAlert)">×</button>
+                    <span class="ft-x"></span> <strong>¡Error!</strong>
+                    <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
+                    <p>¡Su usuario no pudo ser activado!.</p>
+                </div>
             </div>
 
         </div>
