--- a/src/main/webapp/app/entities/institution/institution-form.component.html
+++ b/src/main/webapp/app/entities/institution/institution-form.component.html
@@ -1,7 +1,12 @@
 <div class="card">
     <div class="card-header">
-        <div class="alert alert-success" *ngIf="success">
-            <strong>¡Su registro ha sido exitoso!</strong> Por favor inicie sesión nuevamente.
+        <div *ngIf="success">
+            <div id="successAlert" #successAlert class="popupunder alert alert-dismissible custom-alert-success">
+                <button type="button" data-dismiss="alert" class="close" (click)="closeMe(successAlert)">×</button>
+                <span class="ft-check"></span> <strong>¡Felicidades!</strong>
+                <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
+                <p>¡Su registro ha sido exitoso!<br> Por favor inicie sesión nuevamente.</p>
+            </div>
         </div>
     </div>
     <div class="card-body">
