--- a/src/main/webapp/app/entities/participant/participant-create.component.html
+++ b/src/main/webapp/app/entities/participant/participant-create.component.html
@@ -2,15 +2,20 @@
     <div _ngcontent-c5="" class="col-md-6">
         <div _ngcontent-c5="" class="card">
             <div _ngcontent-c5="" class="card-header">
-                <h4 _ngcontent-c5="" class="card-title" id="basic-layout-colored-form-control">Participantes</h4>
-                <div class="alert alert-success" *ngIf="success">
-                    <strong>¡Su registro ha sido exitoso!</strong> Por favor inicie sesión nuevamente.
+                <div *ngIf="success">
+                    <div id="successAlert" #successAlert class="popupunder alert alert-dismissible custom-alert-success">
+                        <button type="button" data-dismiss="alert" class="close" (click)="closeMe(successAlert)">×</button>
+                        <span class="ft-check"></span> <strong>¡Felicidades!</strong>
+                        <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
+                        <p>¡Su registro ha sido exitoso!<br> Por favor inicie sesión nuevamente.</p>
+                    </div>
                 </div>
             </div>
             <div _ngcontent-c5="" class="card-body">
                 <div _ngcontent-c5="" class="px-3">
                     <form _ngcontent-c5="" class="form ng-untouched ng-pristine ng-valid" name="editForm" role="form"
                           novalidate (ngSubmit)="save()" #editForm="ngForm" *ngIf="!success">
+                        <h4 _ngcontent-c5="" class="card-title" id="basic-layout-colored-form-control">Participantes</h4>
                         <div _ngcontent-c5="" class="form-body">
                             <h4 _ngcontent-c5="" class="form-section">
                                 <i _ngcontent-c5="" class="ft-info"></i>
