--- a/src/main/webapp/app/user-home/user-home.component.html
+++ b/src/main/webapp/app/user-home/user-home.component.html
@@ -16,47 +16,62 @@
     </div>
 
     <ng-container *ngIf="( focusGroups | participantFGFilter : searchText) as result">
-        <div _ngcontent-c25="" class="col-md-6 col-sm-12" *ngFor="let focusGroup of result">
-            <!--<form [routerLink]="['/focus-group', focusGroup.id, 'view']">-->
-            <div _ngcontent-c25="" class="card card-inverse bg-primary text-center gradient-blue-grey-blue"
-                 style="height: 312.703px;">
-                <div _ngcontent-c25="" class="card-body">
-                    <div _ngcontent-c25="" class="card-block pt-3">
-                        <div _ngcontent-c25="" class="row d-flex">
-                            <div _ngcontent-c25="" class="col align-self-center"
-                                 style="min-height: 280px; max-height: 280px;">
-                                <img _ngcontent-c25="" alt="element 01"
-                                     src="https://res.cloudinary.com/utilisimo/image/upload/v1553384683/logoPeq2_j0gcfm.png"
-                                     width="190" style="height: 280px; object-fit: contain;"></div>
-                            <div _ngcontent-c25="" class="col align-self-center">
-                                <h4 _ngcontent-c25="" class="card-title mt-3">{{focusGroup.name}}</h4>
-                                <p _ngcontent-c25="" class="card-text">{{focusGroup.description}}</p>
-                                <a _ngcontent-c22="" id="btn-{{focusGroup.id}}"
-                                   class="btn btn-raised mr-1 shadow-z-2 gradient-amber-amber"
-                                   (click)="askParticipation(focusGroup.id,modalToDisplay)">Participar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--</form>-->
-        </div>
+<!--        <div _ngcontent-c25="" class="col-md-6 col-sm-12" *ngFor="let focusGroup of result">-->
+<!--            &lt;!&ndash;<form [routerLink]="['/focus-group', focusGroup.id, 'view']">&ndash;&gt;-->
+<!--            <div _ngcontent-c25="" class="card card-inverse bg-primary text-center gradient-blue-grey-blue"-->
+<!--                 style="height: 312.703px;">-->
+<!--                <div _ngcontent-c25="" class="card-body">-->
+<!--                    <div _ngcontent-c25="" class="card-block pt-3">-->
+<!--                        <div _ngcontent-c25="" class="row d-flex">-->
+<!--                            <div _ngcontent-c25="" class="col align-self-center"-->
+<!--                                 style="min-height: 280px; max-height: 280px;">-->
+<!--                                <img _ngcontent-c25="" alt="element 01"-->
+<!--                                     src="https://res.cloudinary.com/utilisimo/image/upload/v1553384683/logoPeq2_j0gcfm.png"-->
+<!--                                     width="190" style="height: 280px; object-fit: contain;"></div>-->
+<!--                            <div _ngcontent-c25="" class="col align-self-center">-->
+<!--                                <h4 _ngcontent-c25="" class="card-title mt-3">{{focusGroup.name}}</h4>-->
+<!--                                <p _ngcontent-c25="" class="card-text">{{focusGroup.description}}</p>-->
+<!--                                <a _ngcontent-c22="" id="btn-{{focusGroup.id}}"-->
+<!--                                   class="btn btn-raised mr-1 shadow-z-2 gradient-amber-amber"-->
+<!--                                   (click)="askParticipation(focusGroup.id,modalToDisplay)">Participar</a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;</form>&ndash;&gt;-->
+<!--        </div>-->
 
         <div class="col-md-12 col-sm-12" *ngFor="let focusGroup of result">
             <!--<form [routerLink]="['/focus-group', focusGroup.id, 'view']">-->
-            <div class="card card-inverse bg-primary text-center gradient-blue-grey-blue" style="height: 312.703px;">
+            <div class="card card-inverse bg-primary text-center gradient-blue-grey-blue" >
                 <div class="card-body">
                     <div class="card-block">
                         <div class="row">
                             <div class="col-sm-8 col-md-8 col-8 col-lg-8 col-xl-8">
-                                <h4 class="card-title mt-3">{{focusGroup.name}}</h4>
-                                <p class="card-text">{{focusGroup.description}}</p>
+                                <div class="row">
+                                    <div class="col-12 mt-3">
+                                        <h2 class="text-left">{{focusGroup.name}}</h2>
+                                    </div>
+                                    <div class="col-12 mt-3">
+                                        <h5 class="text-left">{{focusGroup.description}}</h5>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-sm-4 col-md-4 col-4 col-lg-4 col-xl-4">
-                                <p class="card-text">{{focusGroup.beginDate | date:'mediumDate'}} / {{focusGroup.endDate | date:'mediumDate'}}</p>
-                                <a id="btn-new-{{focusGroup.id}}"
-                                   class="btn btn-raised mr-1 shadow-z-2 gradient-amber-amber"
-                                   (click)="askParticipation(focusGroup.id,modalToDisplay)">Participar</a>
+                                <div class="row">
+                                    <div class="col-12 mt-3 justify-content-center">
+                                        <h5 class="">
+                                            <i class="ft-calendar"></i>
+                                            {{focusGroup.beginDate | date:'mediumDate'}}
+                                            / {{focusGroup.endDate | date:'mediumDate'}}</h5>
+                                    </div>
+                                    <div class="col-8 mt-3 justify-content-center">
+                                        <a id="btn-new-{{focusGroup.id}}"
+                                           class="btn btn-raised mr-1 shadow-z-2 gradient-amber-amber"
+                                           (click)="askParticipation(focusGroup.id,modalToDisplay)">Participar</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
