--- a/src/main/webapp/app/entities/test-result/test-result.component.html
+++ b/src/main/webapp/app/entities/test-result/test-result.component.html
@@ -2,6 +2,14 @@
     <div class="col-sm-12">
         <div class="card">
             <div class="card-header">
+                <div *ngIf="quantitySurpassed">
+                    <div id="warningAlert" #warningAlert class="popupunder alert alert-dismissible custom-alert-warning">
+                        <button type="button" data-dismiss="alert" class="close" (click)="closeMe(warningAlert)">×</button>
+                        <span class="ft-alert-triangle"></span> <strong>¡Atención!</strong>
+                        <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
+                        <p>El grupo de enfoque ya posee la cantidad de participantes especificada.</p>
+                    </div>
+                </div>
                 <h4 class="card-title">
                     Resultados de pruebas
                     <button id="go-back" class="btn btn-raised btn-primary float-right"
