Fixed alerts prompt on multiple clicks

--- a/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
+++ b/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
@@ -3,8 +3,8 @@
         <div class="col-md-4">
 
             <div *ngIf="keyMissing">
-                <div id="dangerErrorAlert" #dangerErrorAlert class="popupunder alert alert-dismissible custom-alert-danger">
-                    <button type="button" data-dismiss="alert" class="close" (click)="closeMe(dangerErrorAlert)">×</button>
+                <div id="dangerKeyErrorAlert" #dangerErrorAlert class="popupunder alert alert-dismissible custom-alert-danger">
+                    <button type="button" data-dismiss="alert" class="close" (click)="closeMeSuccess(dangerErrorAlert)">×</button>
                     <span class="ft-x"></span> <strong>¡Error!</strong>
                     <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
                     <p>No se encuentra llave de recuperar contraseña.</p>
@@ -22,7 +22,7 @@
 
             <div *ngIf="success">
                 <div id="successAlert" #successAlert class="popupunder alert alert-dismissible custom-alert-success">
-                    <button type="button" data-dismiss="alert" class="close" (click)="closeMe(successAlert)">×</button>
+                    <button type="button" data-dismiss="alert" class="close" (click)="closeMeSuccess(successAlert)">×</button>
                     <span class="ft-check"></span> <strong>¡Felicidades!</strong>
                     <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
                     <p>¡Su contraseña ha sido cambiada! Por favor <a class="alert-link" (click)="login()">inicie sesión. </a></p>
