--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -11,7 +11,7 @@
 
                 <div *ngIf="success">
                     <div id="successAlert" #successAlert class="popupunder alert alert-dismissible custom-alert-success">
-                        <button type="button" data-dismiss="alert" class="close" (click)="closeMe(successAlert)">×</button>
+                        <button type="button" data-dismiss="alert" class="close" (click)="closeMeSuccess(successAlert)">×</button>
                         <span class="ft-check"></span> <strong>¡Felicidades!</strong>
                         <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
                         <p>¡Su registro ha sido exitoso!<br> Por favor revise su correo para verificar su cuenta.</p>
