--- a/src/main/webapp/app/dashboard-institution/dashboard-institution.component.html
+++ b/src/main/webapp/app/dashboard-institution/dashboard-institution.component.html
@@ -348,7 +348,7 @@
                             </div>
                         </div>
                         <div _ngcontent-c25="" class="card-footer text-center" id="footerPremium">
-                            <a (click)="obtenerPlanPremium()" class="btn btn-flat btn-primary m-0">Obtener</a>
+                            <a (click)="openModal(confirmationWindow)" class="btn btn-flat btn-primary m-0">Obtener</a>
                         </div>
                     </div>
                 </div>
@@ -356,4 +356,47 @@
         </div>
     </div>
 </div>
+
+<ng-template #confirmationWindow let-c="close" let-d="dismiss">
+    <div class="modal-header" style="background-color: #5cb85c; color: #fff;">
+        <h4 class="modal-title">Confirmación</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="px-3">
+            <form class="form ng-untouched ng-pristine ng-valid" name="editForm" role="form" novalidate>
+                <div class="form-body">
+                    <div class="form-group">
+                        <label class="form-control-label">¿Estás seguro que quieres pagar ₡10.000
+                            por esta membresía?</label>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" id="cancel-save" class="btn btn-raised btn-warning mr-1"
+                (click)="d('Force cancel')">
+            <i class="ft-x"></i> Cancelar
+        </button>
+        <button class="btn btn-raised btn-primary" type="submit" id="save-entity"
+                (click)="obtenerPlanPremium(); d('Force cancel')">
+            <i class="ft ft-check"></i> Confirmar
+        </button>
+    </div>
+</ng-template>
+
+<div *ngIf="notEnoughCredits">
+    <div id="warningNotEnoughCreditsAlert" #warningNotEnoughCreditsAlert class="popupunder alert alert-dismissible custom-alert-warning">
+        <button type="button" data-dismiss="alert" class="close" (click)="closeMe(warningNotEnoughCreditsAlert)">×</button>
+        <span class="ft-alert-triangle"></span> <strong>¡Atención!</strong>
+        <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
+        <p>¡No posees suficientes fondos para realizar la compra!
+            <strong><a style="color: #fff;" [routerLink]="['/balance-account']" routerLinkActive="active"
+                       [routerLinkActiveOptions]="{ exact: true }">¿Recargar cuenta?</a></strong></p>
+    </div>
+</div>
+
 
