fix to aptitude test in focus group

--- a/src/main/webapp/app/user-home/user-home.component.html
+++ b/src/main/webapp/app/user-home/user-home.component.html
@@ -67,7 +67,7 @@
                                             / {{focusGroup.endDate | date:'mediumDate'}}</h5>
                                     </div>
                                     <div class="col-8 mt-3 justify-content-center">
-                                        <a id="btn-new-{{focusGroup.id}}"
+                                        <a id="btn-{{focusGroup.id}}"
                                            class="btn btn-raised mr-1 shadow-z-2 gradient-amber-amber"
                                            (click)="askParticipation(focusGroup.id,modalToDisplay)">Participar</a>
                                     </div>
