--- a/src/main/webapp/app/entities/payment/payment-update.component.html
+++ b/src/main/webapp/app/entities/payment/payment-update.component.html
@@ -55,9 +55,9 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_oringAccount">Oring Account</label>
-                    <select class="form-control" id="field_oringAccount" name="oringAccount" [(ngModel)]="payment.oringAccount" >
+                    <select class="form-control" id="field_oringAccount" name="oringAccount" [(ngModel)]="payment.originAccount" >
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="balanceAccountOption.id === payment.oringAccount?.id ? payment.oringAccount : balanceAccountOption" *ngFor="let balanceAccountOption of balanceaccounts; trackBy: trackBalanceAccountById">{{balanceAccountOption.id}}</option>
+                        <option [ngValue]="balanceAccountOption.id === payment.originAccount?.id ? payment.originAccount : balanceAccountOption" *ngFor="let balanceAccountOption of balanceaccounts; trackBy: trackBalanceAccountById">{{balanceAccountOption.id}}</option>
                     </select>
                 </div>
             </div>
